Remove spurious slash from Tomcat section header

--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,7 @@
 	<property name="suffix.dist" value=""/>
 	<property name="suffix.deploy" value=""/>
 
-	<!--	Tomcat-related definitions\	-->
+	<!--	Tomcat-related definitions	-->
 
 	<property name="tomcat-config.dir" location="tomcat"/>
 	<property name="tomcat-local.file" location="${tomcat-config.dir}/local.properties"/>
