--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 build
 third-party
 output
+doc
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
