Fix output directory name for test script, and add input directory for pst files under test

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@
 # Directories
 build
 third-party
-output-test
+test-output
+pst
 doc
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
