--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 build
 third-party
 test-output
-pst
+test-pst-files
 doc
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
