--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ third-party
 test-output
 test-pst-files
 doc
+*/target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
