--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -25,13 +25,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-api</artifactId>
-			<version>2.3.4</version>
+			<artifactId>myfaces-bundle</artifactId>
+			<version>2.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.myfaces.tomahawk</groupId>
 			<artifactId>tomahawk20</artifactId>
 			<version>1.1.11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
