--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -24,6 +24,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>io.github.jmcleodfoss</groupId>
+			<artifactId>localebean</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.myfaces.core</groupId>
 			<artifactId>myfaces-bundle</artifactId>
 			<version>2.1.4</version>
