--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -31,17 +31,17 @@
 		<dependency>
 			<groupId>org.apache.myfaces.core</groupId>
 			<artifactId>myfaces-bundle</artifactId>
-			<version>2.1.4</version>
+			<version>2.3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.myfaces.tomahawk</groupId>
 			<artifactId>tomahawk20</artifactId>
-			<version>1.1.11</version>
+			<version>1.1.14</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>el-impl</artifactId>
-			<version>2.2</version>
+			<version>2.2.1-b05</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
