--- a/pstExtractor/src/main/java/io/github/jmcleodfoss/text-resources.properties
+++ b/pstExtractor/src/main/java/io/github/jmcleodfoss/text-resources.properties
@@ -1,10 +1,10 @@
 # Pages
-about.title.text=About Bufflehead Software's PST Extractor Demonstration Application
+about.title.text=About the PST Extractor Demonstration Application
 
 accessDenied.title.format=Too Many Incorrect Password Attempts for {0}
 accessDenied.description.format=You did not provide the correct password for {0} after {1} attempts. We are sure you know it, but just in case you are trying to crack passwords on PST files you shouldn&apos;t see, we will inconvenience you by making you start over.
 
-blog.title.text=The Bufflehead Software PST Extractor Blog
+blog.title.text=The PST Extractor Blog
 
 corruptPST.title.format=Corrupt PST File {0}
 corruptPST.description.format=The file {0} is either corrupt or not a PST file. Please <a href="ExtractionForm.jsf">click here to select a valid PST file.</a>
@@ -18,7 +18,7 @@ help.title.text=Help
 incorrectPassword.title.format=Incorrect Password for PST File {0}
 incorrectPassword.description.format=The password provided for the PST file {0} is incorrect. You may enter another password on this page, or <a href="ExtractionForm.jsf">click here to select a new PST file</a>. Note that this is attempt {1}; you are permitted a total of {2} attempts before being kicked back to the original PST selection page.
 
-home.title.text=The Bufflehead Software PST File Extraction Demonstration Application
+home.title.text=The PST File Extraction Demonstration Application
 
 notPST.title.format=Invalid PST File {0}
 notPST.description.format=The file {0} does not appear to be a PST file. Please provide a valid PST file. Please <a href="ExtractionForm.jsf">click here to select a valid PST file.</a>
