Add more description, licensing, etc

--- a/pst/pom.xml
+++ b/pst/pom.xml
@@ -1,12 +1,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>io.github.jmcleodfoss</groupId>
 	<artifactId>pst</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>pst</name>
-	<url>http://maven.apache.org</url>
+	<name>${project.groupId}:{$project.artifactId}</name>
+	<description>A library for reading Microsoft Outlook PST files.</description>
+	<url>https://io.github.com/Jmcleodfoss/pst</url>
+
+	<licenses>
+		<license>
+			<name>The MIT Licence</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>James McLeod</name>
+			<email>jmcleodfoss@gmail.com</email>
+			<organizationUrl>https://io.github.com/Jmcleodfoss/pst</organizationUrl>
+		</developer>
+	</developers>
 
 	<dependencies>
 		<dependency>
