Add more info to pom files for swingutil and util libraries

--- a/swingutil/pom.xml
+++ b/swingutil/pom.xml
@@ -5,8 +5,23 @@
 	<artifactId>swingutil</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>swingutil</name>
-	<url>http://maven.apache.org</url>
+	<name>${project.groupId}:{$project.artifactId}</name>
+	<description>A swing library for reading Microsoft Outlook PST files.</description>
+	<url>https://io.github.com/Jmcleodfoss/pst</url>
+
+	<licenses>
+		<license>
+			<name>The MIT Licence</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>James McLeod</name>
+			<email>jmcleodfoss@gmail.com</email>
+			<organizationUrl>https://io.github.com/Jmcleodfoss/pst</organizationUrl>
+		</developer>
 
 	<dependencies>
 		<dependency>
