--- a/xml/pom.xml
+++ b/xml/pom.xml
@@ -5,8 +5,16 @@
 	<artifactId>xml</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>xml</name>
-	<url>http://maven.apache.org</url>
+	<name>${project.groupId}:{$project.artifactId}</name>
+	<description>A library for simplistic XML processing.</description>
+	<url>https://io.github.com/Jmcleodfoss/pst</url>
+
+	<licenses>
+		<license>
+			<name>The MIT Licence</name>
+			<url>https://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
