Handle maven tests by fixing the working directory

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,6 @@
 build
 third-party
 test-output
-test-pst-files
 doc
 */target
 
@@ -35,3 +34,6 @@ hs_err_pid*
 
 # Other files
 diag.txt
+
+# PST files
+*.pst
