--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 
 # Directories
 test-output
+target
 */target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
