--- a/pstExtractor/src/main/webapp/WEB-INF/web.xml
+++ b/pstExtractor/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,13 @@
 		</init-param>
 	</filter>
 
+	<multipart-config>
+		<!-- Set server upload size to match MyFacesExtensionsFilter -->
+		<max-file-size>52428800</max-file-size>
+		<max-request-size>52428800</max-request-size>
+		<file-size-threshold>0</file-size-threshold>
+	</multipart-config>
+
 	<filter-mapping>
 		<filter-name>MyFacesExtensionsFilter</filter-name>
 		<servlet-name>Faces Servlet</servlet-name>
