Drop the 'jar-with-dependencies' suffix from the final jar

--- a/explorer/pom.xml
+++ b/explorer/pom.xml
@@ -54,6 +54,7 @@
 							<mainClass>io.github.jmcleodfoss.explorer.pstExplorer</mainClass>
 						</manifest>
 					</archive>
+					<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 			</plugin>
 		</plugins>
