Add xml to list of included modules in parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>pstExtractor</module>
 		<module>swingutil</module>
 		<module>util</module>
+		<module>xml</module>
 	</modules>
 
 	<licenses>
