--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,6 @@
 	<packaging>pom</packaging>
 	<url>https://io.github.com/Jmcleodfoss/pst</url>
 
-	<modules>
-		<module>explorer</module>
-		<module>localeBean</module>
-		<module>pst</module>
-		<module>pstExtractor</module>
-		<module>swingutil</module>
-		<module>util</module>
-		<module>xml</module>
-	</modules>
-
 	<licenses>
 		<license>
 			<name>The MIT Licence</name>
@@ -31,46 +21,100 @@
 		</developer>
 	</developers>
 
+	<profiles>
+		<profile>
+			<!-- Do all included modules by default -->
+			<id>default</id>
+
+			<modules>
+				<module>explorer</module>
+				<module>localeBean</module>
+				<module>pst</module>
+				<module>pstExtractor</module>
+				<module>swingutil</module>
+				<module>util</module>
+				<module>xml</module>
+			</modules>
+
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+
+		<profile>
+			<!-- Deploy to maven central via ossrh for the main library and the explorer application -->
+			<id>deploy-ossrh</id>
+
+			<modules>
+				<module>pst</module>
+				<module>explorer</module>
+			</modules>
+
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>2.2.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.1.1</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.5</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
+				<artifactId>maven-help-plugin</artifactId>
+				<version>3.1.0</version>
 				<executions>
 					<execution>
-						<id>attach-sources</id>
+						<id>show-profiles</id>
+						<phase>compile</phase>
 						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.1.1</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
+							<goal>active-profiles</goal>
 						</goals>
 					</execution>
 				</executions>
